实现了打包部署，解决了ClassLoader的问题，BIO结束

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -66,6 +66,13 @@
                 </includes>
                 <filtering>false</filtering>
             </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*.*</include>
+                </includes>
+                <filtering>false</filtering>
+            </resource>
         </resources>
         <plugins>
             <plugin>
