--- a/sample/src/main/resources/log4j.properties
+++ b/sample/src/main/resources/log4j.properties
@@ -6,7 +6,7 @@ log4j.rootLogger = debug,stdout
 log4j.appender.stdout = org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target = System.out
 log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern = [%-5p] %d{yyyy-MM-dd HH:mm:ss,SSS} method:%l%n%m%n
+log4j.appender.stdout.layout.ConversionPattern = [%-5p] %t %d{yyyy-MM-dd HH:mm:ss,SSS} method:%l%n%m%n
 
 
 #ERROR¡¢WARN¡¢INFO¡¢DEBUG
