--- a/sample/src/main/webapp/WEB-INF/web.xml
+++ b/sample/src/main/webapp/WEB-INF/web.xml
@@ -1,48 +1,80 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app>
-    
-    <HTTPServlet>
-        <HTTPServlet-name>LoginServlet</HTTPServlet-name>
-        <HTTPServlet-class>com.sinjinsong.webserver.sample.web.HTTPServlet.LoginServlet</HTTPServlet-class>
-    </HTTPServlet>
-    
-    <HTTPServlet>
-        <HTTPServlet-name>LogoutServlet</HTTPServlet-name>
-        <HTTPServlet-class>com.sinjinsong.webserver.sample.web.HTTPServlet.LogoutServlet</HTTPServlet-class>
-    </HTTPServlet>
-    
-    <HTTPServlet>
-        <HTTPServlet-name>UserServlet</HTTPServlet-name>
-        <HTTPServlet-class>com.sinjinsong.webserver.sample.web.HTTPServlet.UserServlet</HTTPServlet-class>
-    </HTTPServlet>
-    
-    <HTTPServlet-mapping>
-        <HTTPServlet-name>LoginServlet</HTTPServlet-name>
-        <url-pattern>/login</url-pattern>
-    </HTTPServlet-mapping>
-    
-    <HTTPServlet-mapping>
-        <HTTPServlet-name>LogoutServlet</HTTPServlet-name>
-        <url-pattern>/logout</url-pattern>
-    </HTTPServlet-mapping>
 
-    <HTTPServlet-mapping>
-        <HTTPServlet-name>UserServlet</HTTPServlet-name>
+    <servlet>
+        <servlet-name>LoginServlet</servlet-name>
+        <servlet-class>com.sinjinsong.webserver.sample.web.servlet.LoginServlet</servlet-class>
+    </servlet>
+
+    <servlet>
+        <servlet-name>LogoutServlet</servlet-name>
+        <servlet-class>com.sinjinsong.webserver.sample.web.servlet.LogoutServlet</servlet-class>
+    </servlet>
+
+    <servlet>
+        <servlet-name>UserServlet</servlet-name>
+        <servlet-class>com.sinjinsong.webserver.sample.web.servlet.UserServlet</servlet-class>
+    </servlet>
+
+    <servlet>
+        <servlet-name>UserEditServlet</servlet-name>
+        <servlet-class>com.sinjinsong.webserver.sample.web.servlet.UserEditServlet</servlet-class>
+    </servlet>
+
+    <servlet>
+        <servlet-name>DefaultServlet</servlet-name>
+        <servlet-class>com.sinjinsong.webserver.core.servlet.impl.DefaultServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>LoginServlet</servlet-name>
+        <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>LogoutServlet</servlet-name>
+        <url-pattern>/logout</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>UserServlet</servlet-name>
         <url-pattern>/user</url-pattern>
-    </HTTPServlet-mapping>
-    
-    
-    
-    
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>UserEditServlet</servlet-name>
+        <url-pattern>/user/edit</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>DefaultServlet</servlet-name>
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
+
     <!--Filter-->
     <filter>
         <filter-name>LoginFilter</filter-name>
         <filter-class>com.sinjinsong.webserver.sample.web.filter.LoginFilter</filter-class>
     </filter>
-    
+
+    <filter>
+        <filter-name>LogFilter</filter-name>
+        <filter-class>com.sinjinsong.webserver.sample.web.filter.LogFilter</filter-class>
+    </filter>
+
     <filter-mapping>
         <filter-name>LoginFilter</filter-name>
-        <url-pattern>/</url-pattern>
+        <url-pattern>/**</url-pattern>
     </filter-mapping>
+
+    <filter-mapping>
+        <filter-name>LogFilter</filter-name>
+        <url-pattern>/**</url-pattern>
+    </filter-mapping>
+
+    <listener>
+        <listener-class>com.sinjinsong.webserver.sample.web.listener.ServletContextAndSessionListener</listener-class>
+        <listener-class>com.sinjinsong.webserver.sample.web.listener.MyServletRequestListener</listener-class>
+    </listener>
 </web-app>
     
